# git-commander

./: .prettierignore  .prettierrc  CHANGELOG.md  README.md  components.json  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  release.config.mjs  tailwind.config.js  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  devpush.yml  pullrequest.yml
src/: error-page.jsx  error-page.tsx  main.jsx  main.tsx  vite-env.d.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/2024-06-21-032225_remote_repository/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  main.rs  schema.rs  terminal.rs
src-tauri/src/handler/: mod.rs  remote_repo_handler.rs
src-tauri/src/model/: mod.rs  remote_repo.rs
src-tauri/src/repository/: mod.rs  remote_repo_repository.rs
src/assets/: languages.json  languanges.json
src/components/: Icons.tsx  Monaco.tsx
src/components/Card/: ChangeView.tsx  CommitView.tsx  Copy.tsx  FileList.tsx  RepoView.tsx  Staging.tsx  Username.tsx  WaitingPush.tsx  ZipView.tsx
src/components/ContextMenu/: FileMenu.tsx
src/components/Dialog/: AddRepo.tsx  ClearSettings.tsx  Clone.jsx  Clone.tsx  Confirmation.tsx  DuplicateDialog.tsx  EditRepo.tsx  ZipFunctionDialog.tsx  ZipTableDialog.tsx
src/components/Git/: Commit.jsx  Commit.tsx
src/components/Navbar/: HelpNavbar.tsx  Navbar.jsx  Navbar.tsx  Toolbar.tsx
src/components/Table/: RepoTable.tsx  ZipTable.tsx
src/components/Tools/: Icons.tsx  Monaco.tsx  TerminalView.tsx  Toolbar.jsx  Toolbar.tsx
src/components/ui/: accordion-list.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  breadcrumb.tsx  button.jsx  button.tsx  card.tsx  checkbox.tsx  command.jsx  command.tsx  context-menu.tsx  dialog.jsx  dialog.tsx  dropdown-menu.tsx  folder.tsx  form.jsx  form.tsx  input.tsx  menubar.tsx  progress.tsx  radio-group.tsx  resizable.tsx  select.tsx  separator.tsx  table.tsx  textarea.tsx  toast.tsx  tooltip.jsx  tooltip.tsx  use-toast.ts
src/lib/: context.js  database.ts  directory.ts  functions.ts  git.js  git.ts  terminalFunc.ts  utils.ts
src/lib/Backend/: database.ts  functions.ts  git.ts
src/lib/Monaco/: userWorker.ts
src/lib/Redux/: branchSlice.js  dirSlice.js  dirSlice.ts  fileList.ts  gitSlice.ts  pullMsg.ts  repoSlice.js  repoSlice.ts  store.js  store.ts  userSlice.js  userSlice.ts
src/lib/Types/: Duplicate.ts  fileList.ts  repo.ts
src/routes/: Layout.jsx  Layout.tsx  index.jsx  index.tsx
src/routes/pages/: Zip.tsx  editor.tsx  folder.jsx  folder.tsx  git.jsx  help.tsx  settings.jsx  settings.tsx  staging.tsx
src/routes/pages/help/: changelog.tsx  faq.tsx  info.tsx  popover.css  resource.tsx  tutorial.tsx
