[package]
name = "git-commander"
version = "0.1.0"
description = "Git Commander"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = "1.8.0"
portable-pty = "0.8.1"
tauri-plugin-cli = "2"
tauri-plugin-window-state = { version = "2" }
tauri-plugin-store = { version = "2" }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
