[package]
name = "git-commander"
version = "0.1.0"
description = "Git Commander"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "app-all", "os-all", "clipboard-all", "window-set-focus", "dialog-open", "notification-all", "path-all", "fs-all", "shell-all", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = "1.8.0"
portable-pty = "0.8.1"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
