[package]
name = "git-commander"
version = "0.1.0"
description = "Git Commander"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
diesel = { version = "2.2.12", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4"] }
portable-pty = "0.9.0"
tauri-plugin-window-state = { version = "2" }
tauri-plugin-store = { version = "2" }
# Upgrade to v2
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
